# WeatherDisplay

./: README.md  platformio.ini
Assets/: ClockCenter.kra  ClockCenter.kra~  HourHand.kra  HourHand.kra~  MinuteHand.kra  MinuteHand.kra~  SecondHand.kra  SecondHand.kra~
Enclosure 3d files/: Enclosure front mounting plate.stl  Rear Cover.stl  Rear Mounting Bracket.stl  Single Piece Enclosure.stl  TRGB Rear Enclosure.3mf  TRGB Rear Enclosure.stl
SquareLineStudioProject/: SquareLine_Project.sll  SquareLine_Project.spj
SquareLineStudioProject/UI Export/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_helpers.c  ui_helpers.h
SquareLineStudioProject/UI Export/components/: ui_comp.h  ui_comp_clockedge.c  ui_comp_dials.c  ui_comp_dials.h  ui_comp_hook.c
SquareLineStudioProject/UI Export/images/: ui_img_clockcenter_png.c
SquareLineStudioProject/UI Export/screens/: ui_Screen1.c  ui_Screen2.c
SquareLineStudioProject/components/: ClockEdge.ecomp  Dials.ecomp
lib/: lv_conf.h
src/: factory.ino  lcd_touch_display.cpp  lcd_touch_display.h  pin_config.h  time_provider.cpp  time_provider.hpp  wifi_lib.cpp  wifi_lib.hpp
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h
src/ui/components/: ui_comp.c  ui_comp_clockedge.c  ui_comp_clockedge.h  ui_comp_dials.c  ui_comp_hook.h
src/ui/images/: ui_img_caution_png.c  ui_img_hourhand_png.c  ui_img_minutehand_png.c  ui_img_secondhand_png.c
src/ui/screens/: ui_LoadingScreen.c  ui_Screen1.c  ui_Screen2.c
